--- a/index.html
+++ b/index.html
@@ -1,6 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>min666999 的个人主页</title>
+    <style>
+        :root {
+            --primary-color: #6366f1;
+            --bg-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        body {
+            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: var(--bg-gradient);
+            color: #333;
+        }
+        .card {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 2rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+            transition: transform 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        .avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background: var(--primary-color);
+            margin: 0 auto 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
+            color: white;
+            box-shadow: 0 4px 10px rgba(99, 102, 241, 0.3);
+        }
+        h1 { margin: 10px 0; font-size: 1.5rem; color: #1a1a1a; }
+        p { color: #666; line-height: 1.6; }
+        .links {
+            margin-top: 1.5rem;
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+        .btn {
+            text-decoration: none;
+            padding: 8px 20px;
+            border-radius: 50px;
+            background: var(--primary-color);
+            color: white;
+            font-size: 0.9rem;
+            transition: opacity 0.2s;
+        }
+        .btn:hover { opacity: 0.9; }
+        .tag {
+            display: inline-block;
+            background: #f0f0f0;
+            padding: 4px 12px;
+            border-radius: 4px;
+            font-size: 0.8rem;
+            margin: 5px;
+        }
+    </style>
+</head>
 <body>
-    <h1>我的博客上线了</h1>
+    <div class="card">
+        <div class="avatar">M</div>
+        <h1>min666999 的博客</h1>
+        <p>👋 你好！这是我的第一个 GitHub Pages 站点。目前正在探索静态网页的无限可能。</p>
+        <div>
+            <span class="tag"># 编程</span>
+            <span class="tag"># 生活</span>
+            <span class="tag"># 科技</span>
+        </div>
+        <div class="links">
+            <a href="https://github.com" class="btn">关注 GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
